[package]
name = "chat-app"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
uuid = {version = "1.16.0", features = ["v4"]}
warp = "0.3.7"
